kube/ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: do-kubernetes-sample-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - www.wearefrontend.com
      - www.stritfighter.com
      secretName: letsencrypt-prod
  rules:
  - host: www.wearefrontend.com
    http:
      paths:
      - path: /
        backend:
          serviceName: do-kubernetes-sample-app
          servicePort: 80

  - host: www.stritfighter.com
    http:
      paths:
      - path: /
        backend:
          serviceName: do-kubernetes-sffe-app
          servicePort: 80
      - path: "/api"
        backend:
          serviceName: do-kubernetes-sfbe-app
          servicePort: 80
